syntax = "proto3";

import "google/protobuf/empty.proto";

package blog;
option go_package = "./blogpb";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  Blog blog = 1;
}

message UpdateBlogResponse {
  Blog blog = 1;
}

message DeleteBlogRequest {
  string blog_id = 1;
}

message DeleteBlogResponse {}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};

  // Possible errors:
  // NOT_FOUND
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {};

  // Possible errors:
  // NOT_FOUND
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {};

  // Possible errors:
  // NOT_FOUND
  rpc DeleteBlog(DeleteBlogRequest) returns (google.protobuf.Empty) {};
}
